force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <description>Story #13473</description>
    <label>Case Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Entrapment</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Non Verbal Response</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Person Answer No Problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>