force-app/main/default/objects/Case/fields/ETA_Provided__c.field-meta.xml
<CustomField>
    <fullName>ETA_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Story #13485</description>
    <label>ETA Provided</label>
    <type>Checkbox</type>
</CustomField>