force-app/main/default/objects/Case/fields/ETA_Requested__c.field-meta.xml
<CustomField>
    <fullName>ETA_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Story #13473</description>
    <label>ETA Requested</label>
    <type>Checkbox</type>
</CustomField>