force-app/main/default/objects/Case/fields/SFS_City__c.field-meta.xml
<CustomField>
    <fullName>SFS_City__c</fullName>
    <description>This field extracts the city value from the Asset.Location.VisitorAddress.City. ADO ID 12294</description>
    <formula>Asset.Location.VisitorAddress.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>