force-app/main/default/objects/Case/fields/SFS_Country__c.field-meta.xml
<CustomField>
    <fullName>SFS_Country__c</fullName>
    <description>This field extracts the country value from the Asset.Location.VisitorAddress.Country. ADO ID 12294</description>
    <formula>Asset.Location.VisitorAddress.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>