force-app/main/default/objects/Case/fields/SFS_State__c.field-meta.xml
<CustomField>
    <fullName>SFS_State__c</fullName>
    <description>This field extracts the state value from the Asset.Location.VisitorAddress.State. ADO ID 12294</description>
    <formula>Asset.Location.VisitorAddress.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>