force-app/main/default/objects/Case/fields/SFS_Street__c.field-meta.xml
<CustomField>
    <fullName>SFS_Street__c</fullName>
    <description>This field extracts the street value from the Asset.Location.VisitorAddress.Street. ADO ID 12294</description>
    <formula>Asset.Location.VisitorAddress.Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>