force-app/main/default/objects/Case/fields/SFS_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>SFS_Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field derives the Work Type based on the sub-type defined in the Case. ADO ID 12294</description>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>