force-app/main/default/objects/Case/fields/SFS_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>SFS_Zip_Code__c</fullName>
    <description>This field extracts the zip code value from the Asset.Location.VisitorAddress.PostalCode. ADO ID 12294</description>
    <formula>Asset.Location.VisitorAddress.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>