force-app/main/default/objects/Case/fields/SVMXA360__BillingType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__BillingType__c</fullName>
    <description>Billing Type represents the method of billing when the work is complete.</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__BillingType</valueSetName>
    </valueSet>
</CustomField>