force-app/main/default/objects/Case/fields/SVMXA360__EntitledServiceId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledServiceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Entitled service id</description>
    <label>Entitled Service</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>