force-app/main/default/objects/Case/fields/SVMXA360__EntitlementDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementDate__c</fullName>
    <description>The date on which the Case is entitled. The entitlement check will default it to &apos;Today&apos; if this field is blank.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entitlement Date</label>
    <type>Date</type>
</CustomField>