force-app/main/default/objects/Case/fields/SVMXA360__EntitlementNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementNotes__c</fullName>
    <description>Stores additional entitlement notes.</description>
    <label>Entitlement Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>