force-app/main/default/objects/Case/fields/SVMXA360__IsEntitlementPerformed__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsEntitlementPerformed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the entitlement check is performed (True) or not (False).</description>
    <label>Is Entitlement Performed</label>
    <type>Checkbox</type>
</CustomField>