force-app/main/default/objects/Case/fields/SVMXA360__PerformAutoEntitlement__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PerformAutoEntitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether to perform entitlement check (True) or not (False).</description>
    <label>Perform Auto-Entitlement</label>
    <type>Checkbox</type>
</CustomField>