force-app/main/default/objects/Case/fields/SVMXA360__ProductServiceCampaignId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductServiceCampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Service Campaign related to the case Record.</description>
    <label>Product Service Campaign</label>
    <referenceTo>ProductServiceCampaign</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>