force-app/main/default/objects/Case/fields/SVMXA360__ProductServiceCampaignItemId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductServiceCampaignItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product Service Campaign Item Line related to the Case record.</description>
    <label>Product Service Campaign Item</label>
    <referenceTo>ProductServiceCampaignItem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>