force-app/main/default/objects/Case/fields/SVMXA360__SupplierWarranty__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SupplierWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field when true indicates that there are supplier Warranties available.</description>
    <label>Supplier Warranty</label>
    <type>Checkbox</type>
</CustomField>