force-app/main/default/objects/Case/fields/Testing_Type__c.field-meta.xml
<CustomField>
    <fullName>Testing_Type__c</fullName>
    <description>Story #13473</description>
    <label>Testing Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mechanic</fullName>
            </value>
            <value>
                <fullName>Building Mgmt</fullName>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>