force-app/main/default/objects/Case/fields/TWC_Camera_Compliance__c.field-meta.xml
<CustomField>
    <fullName>TWC_Camera_Compliance__c</fullName>
    <description>Story #13473</description>
    <label>TWC Camera Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
            </value>
            <value>
                <fullName>Non Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>