force-app/main/default/objects/Case/fields/TWC_Validation__c.field-meta.xml
<CustomField>
    <fullName>TWC_Validation__c</fullName>
    <description>Story #13473</description>
    <label>TWC Validation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TWC Successful</fullName>
            </value>
            <value>
                <fullName>TWC Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>