force-app/main/default/objects/Case/recordTypes/Call_Center.recordType-meta.xml
<RecordType>
    <fullName>Call_Center</fullName>
    <active>true</active>
    <businessProcess>Call Center</businessProcess>
    <description>Use this to create for these Case Types: Reception, Phone Monitoring Event, Emergency, Service Request</description>
    <label>Call Center</label>
</RecordType>