force-app/main/default/objects/Case/recordTypes/leankor__Doctor_Case.recordType-meta.xml
<RecordType>
    <fullName>leankor__Doctor_Case</fullName>
    <active>true</active>
    <businessProcess>leankor__IT Support Process</businessProcess>
    <description>Case record type for when doctors need help</description>
    <label>Doctor Case</label>
</RecordType>