force-app/main/default/objects/Case/recordTypes/leankor__ITCase.recordType-meta.xml
<RecordType>
    <fullName>leankor__ITCase</fullName>
    <active>true</active>
    <businessProcess>leankor__IT Support Process</businessProcess>
    <description>This case record type is for technical issues</description>
    <label>IT Case</label>
</RecordType>