force-app/main/default/objects/Case/recordTypes/Shared_Services.recordType-meta.xml
<RecordType>
    <fullName>Shared_Services</fullName>
    <active>true</active>
    <businessProcess>Shared Services</businessProcess>
    <description>Use this to create for these Case Types: Risk of Loss, Contract Change Requests, Payment Processing</description>
    <label>Shared Services</label>
</RecordType>