force-app/main/default/objects/Case/listViews/ALBANY_Case.listView-meta.xml
<ListView>
    <fullName>ALBANY_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ALBANY</label>
    <queue>ALBANY</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>