force-app/main/default/objects/Case/listViews/ALBUQUERQUE_Case.listView-meta.xml
<ListView>
    <fullName>ALBUQUERQUE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ALBUQUERQUE</label>
    <queue>ALBUQUERQUE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>