force-app/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.TYPE</columns>
    <columns>Case_Sub_Type__c</columns>
    <columns>ETA_Requested__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>