force-app/main/default/objects/Case/listViews/ALLENTOWN_Case.listView-meta.xml
<ListView>
    <fullName>ALLENTOWN_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ALLENTOWN</label>
    <queue>ALLENTOWN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>