force-app/main/default/objects/Case/listViews/ANAHEIM_Case.listView-meta.xml
<ListView>
    <fullName>ANAHEIM_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ANAHEIM</label>
    <queue>ANAHEIM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>