force-app/main/default/objects/Case/listViews/ANCHORAGE_Case.listView-meta.xml
<ListView>
    <fullName>ANCHORAGE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ANCHORAGE</label>
    <queue>ANCHORAGE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>