force-app/main/default/objects/Case/listViews/ATLANTA_Case.listView-meta.xml
<ListView>
    <fullName>ATLANTA_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ATLANTA</label>
    <queue>ATLANTA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>