force-app/main/default/objects/Case/listViews/AUSTIN_Case.listView-meta.xml
<ListView>
    <fullName>AUSTIN_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AUSTIN</label>
    <queue>AUSTIN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>