force-app/main/default/objects/Case/listViews/BALTIMORE_Case.listView-meta.xml
<ListView>
    <fullName>BALTIMORE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BALTIMORE</label>
    <queue>BALTIMORE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>