force-app/main/default/objects/Case/listViews/BANFF_Case.listView-meta.xml
<ListView>
    <fullName>BANFF_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BANFF</label>
    <queue>BANFF</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>