force-app/main/default/objects/Case/listViews/BARRIE_Case.listView-meta.xml
<ListView>
    <fullName>BARRIE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BARRIE</label>
    <queue>BARRIE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>