force-app/main/default/objects/Case/listViews/BATON_ROUGE_Case.listView-meta.xml
<ListView>
    <fullName>BATON_ROUGE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BATON ROUGE</label>
    <queue>BATON_ROUGE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>