force-app/main/default/objects/Case/listViews/BELLEVILLE_Case.listView-meta.xml
<ListView>
    <fullName>BELLEVILLE_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BELLEVILLE</label>
    <queue>BELLEVILLE</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>