force-app/main/default/objects/Case/listViews/BIRMINGHAM_Case.listView-meta.xml
<ListView>
    <fullName>BIRMINGHAM_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BIRMINGHAM</label>
    <queue>BIRMINGHAM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>